--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 python-telegram-bot==13.7
-google-api-python-client==2.30.0
-google-auth-httplib2==0.1.0
+google-auth==2.3.3
 google-auth-oauthlib==0.4.6
-python-dotenv==0.19.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.31.0
+python-dotenv==0.19.2
